# redax-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yml
.github/workflows/: cd.yml
examples/: simple.rs
src/: lib.rs
src/relay/: client.rs  mod.rs  request.rs
src/sdk/: mod.rs
src/sdk/data/: mod.rs
src/sdk/data/v1/: data_sdk.rs  mod.rs  req_objects.rs  res_objects.rs
