[package]
name = "redax-rs"
version = "0.1.0"
authors = ["Luca Georges François <luca@quartz.technology>"]
description = "Rust SDK for the Relay Data Transparency API on Ethereum"
repository = "https://github.com/quartz-technology/redax-rs"
license-file = "LICENSE"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = "0.5.2"
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus.git" }
mev-rs = { git = "https://github.com/ralexstokes/mev-rs.git" }

hex = "0.4.3"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.193"
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = "1.34.0"
url = "2.5.0"
serde-aux = "4.2.0"
